crates/pcb-zen-core/tests/snapshots/input__interface_io.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 100
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    U1: Module {
        path: U1,
        source: "/Module.zen",
    },
}
[]
