crates/pcb-zen-core/tests/snapshots/input__interface_mixed_templates_and_types.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 334
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "IC1",
                    type: "asic",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "EN": FrozenValue(
                            Net {
                                name: "CHIP_control_EN",
                                id: "<ID>",
                            },
                        ),
                        "RST": FrozenValue(
                            Net {
                                name: "CHIP_control_RST",
                                id: "<ID>",
                            },
                        ),
                        "SIG": FrozenValue(
                            Net {
                                name: "CHIP_signal",
                                id: "<ID>",
                            },
                        ),
                        "VDD": FrozenValue(
                            Net {
                                name: "CHIP_VDD",
                                id: "<ID>",
                            },
                        ),
                        "VSS": FrozenValue(
                            Net {
                                name: "CHIP_VSS",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "VDD",
                                "2": "VSS",
                                "3": "SIG",
                                "4": "EN",
                                "5": "RST",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
