crates/pcb-zen-core/tests/snapshots/input__interface_multiple_net_templates.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 260
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "U1",
                    type: "mcu",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "EN": FrozenValue(
                            Net {
                                name: "MCU_EN",
                                id: "<ID>",
                            },
                        ),
                        "GND": FrozenValue(
                            Net {
                                name: "MCU_GND",
                                id: "<ID>",
                            },
                        ),
                        "VCC": FrozenValue(
                            Net {
                                name: "MCU_3V3",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "VCC",
                                "2": "GND",
                                "3": "EN",
                            },
                        },
                    ),
                },
            ),
            FrozenValue(
                Component {
                    name: "U2",
                    type: "sensor",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "ENABLE": FrozenValue(
                            Net {
                                name: "SENSOR_EN",
                                id: "<ID>",
                            },
                        ),
                        "VDD": FrozenValue(
                            Net {
                                name: "SENSOR_3V3",
                                id: "<ID>",
                            },
                        ),
                        "VSS": FrozenValue(
                            Net {
                                name: "SENSOR_GND",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "VDD",
                                "2": "VSS",
                                "3": "ENABLE",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
