crates/pcb-zen-core/tests/snapshots/input__interface_nested_template.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 297
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "J1",
                    type: "usb_connector",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "D+": FrozenValue(
                            Net {
                                name: "PORT1_D+",
                                id: "<ID>",
                            },
                        ),
                        "D-": FrozenValue(
                            Net {
                                name: "PORT1_D-",
                                id: "<ID>",
                            },
                        ),
                        "GND": FrozenValue(
                            Net {
                                name: "PORT1_power_GND",
                                id: "<ID>",
                            },
                        ),
                        "VBUS": FrozenValue(
                            Net {
                                name: "PORT1_power_VCC",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "VBUS",
                                "2": "D+",
                                "3": "D-",
                                "4": "GND",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
