crates/pcb-zen-core/tests/snapshots/input__interface_net_incompatible.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
Error: Module.zen:9:1-17:2 Pin 'in' must be connected to a Net, got InterfaceValue
