crates/pcb-zen-core/tests/snapshots/input__interface_net_template_basic.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 245
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "Module.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    type: "resistor",
                    footprint: "package://stdlib/kicad-footprints/Capacitor_SMD.pretty/C_0805_2012Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "PREFIX_MYTEST",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "GND",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
