crates/pcb-zen-core/tests/snapshots/input__io_config.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 29
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    U1: Module {
        path: U1,
        source: "/Module.zen",
        children: [
            FrozenValue(
                Component {
                    name: "comp0",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "V": FrozenValue(
                            Net {
                                name: "VCC",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "V",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
