crates/pcb-zen-core/tests/snapshots/input__io_config_with_help_text.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 398
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    U1: Module {
        path: U1,
        source: "/Module.zen",
        children: [
            FrozenValue(
                Component {
                    name: "test",
                    footprint: "package://stdlib/kicad-footprints/Resistor_SMD.pretty/R_0402_1005Metric.kicad_mod",
                    prefix: "U",
                    connections: {
                        "GND": FrozenValue(
                            Net {
                                name: "GND",
                                id: "<ID>",
                            },
                        ),
                        "PWR": FrozenValue(
                            Net {
                                name: "VCC",
                                id: "<ID>",
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "PWR",
                                "2": "GND",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
