crates/pcb-zen-core/tests/snapshots/input__io_default_template_skips_implicit_checks.snap
---
source: crates/pcb-zen-core/tests/input.rs
assertion_line: 93
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "top.zen",
    },
    child: Module {
        path: child,
        source: "/Module.zen",
        children: [
            FrozenValue(
                Component {
                    name: "U1",
                    footprint: "TEST:0402",
                    prefix: "U",
                    connections: {
                        "VDD": FrozenValue(
                            Net {
                                name: "VIN",
                                id: "<ID>",
                                properties: {
                                    "voltage": FrozenValue(
                                        PhysicalValue {
                                            nominal: 5,
                                            min: 5,
                                            max: 5,
                                            unit: PhysicalUnitDims {
                                                current: 0,
                                                time: 0,
                                                voltage: 1,
                                                temp: 0,
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "VDD",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
