crates/pcb-zen-core/tests/snapshots/input__io_interface_incompatible.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
Error: parent.zen:10:1-30 Error instantiating `Module`
Error: /Module.zen:5:10-27 Input 'signal' (type) has wrong type for this placeholder: expected Net, got SingleNet(signal=SIG_signal)
Advice: parent.zen:8:10-26 Net name 'SIG_signal' should be UPPERCASE: 'SIG_SIGNAL'
