crates/pcb-zen-core/tests/snapshots/input__io_invalid_type.snap
---
source: crates/pcb-zen-core/tests/input.rs
expression: output
---
Error: test.zen:6:9-25 io() requires a Net or interface type, got function.
